# maturski

./: .gitignore  CMakeLists.txt  README.md  build.bat
resources/files/: map.txt
resources/shaders/: lightmask.frag
src/: AudioHolder.h  FontHolder.h  Game.cpp  Game.h  MusicHolder.h  OtherGameObjectManager.cpp  OtherGameObjectManager.h  Player.cpp  Player.h  ResourceHolder.h  ResourceHolder.inl  ShaderHolder.h  SpriteAnimator.cpp  SpriteAnimator.h  TextureHolder.h  Tilemap.cpp  Tilemap.h  main.cpp  resource.h
